<resources>
    <string name="app_name">Mis Trueques</string>
    <string name="account">Mi Cuenta</string>
    <string name="home">Inicio</string>
    <string name="inbox">Buzon</string>
    <string name="notifications">Notificaciones</string>
    <string name="status">Estado en Linea</string>
    <string name="sales">Gestion de ventas</string>
    <string name="earnings">Ganancias</string>
    <string name="services">Mis servicios</string>
    <string name="buyersRequests">Solicitudes de Compradores</string>
    <string name="promoteServices">Promocionar sus servicios</string>
    <string name="settings">Configuraciones</string>
    <string name="profile">Perfil</string>
    <string name="support">Soporte</string>
    <string name="viewAsBuyer">Ver como un comprador</string>
    <string name="version">version a1.0.2</string>
    <string name="Menu">Menu Options</string>
    <string name="open">Abrir</string>
    <string name="close">Cerrar</string>
</resources>
